# Modul1_Sprint1

./: collections_deque.py  guesing_game.py  itertools_combinations.py  ordered_dictionary.py  pig_latin.py  restaurant_order.py
calc_package/: LICENSE  README.md  counter.py  pyproject.toml  test.py  tests.py
calc_package/src/: mycounter.py
calc_package/src/calc_package/: __init__.py  mycounter.py
calculator/: __init__.py  calculator.py
